lp/main/lp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lp
  labels:
    app: lp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lp
  template:
    metadata:
      name: lp
      labels:
        app: lp
    spec:
      imagePullSecrets:
        - name: harbor-registry
      containers:
        - name: lp
          image: harbor.kigawa.net/private/portfolio:main-0a48c4a4347e5fc2623499e0e01bb41421a895df
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: lp
spec:
  selector:
    app: lp
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
