lp/main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lp
spec:
  ingressClassName: haproxy
  rules:
    - host: kigawa.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lp
                port:
                  number: 3000
    - host: lp.kigawa.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lp
                port:
                  number: 3000
